--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "server",
+  "name": "Rasengan Online Code Editor",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Online Code Editor",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install -prefix client",
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Chetan Waghade",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
